refactored with markdown files

--- a/misc_field_number_mapping.yml
+++ b/misc_field_number_mapping.yml
@@ -1,5 +1,5 @@
-topmostSubform[0].CopyB[0].CopyBHeader[0].CalendarYear[0].f2_1[0]: 3
-# //   "topmostSubform[0].CopyB[0].CopyBHeader[0].c2_1[0]": null
+topmostSubform[0].CopyB[0].CopyHeader[0].CalendarYear[0].f2_1[0]: 3
+# //   "topmostSubform[0].CopyB[0].CopyHeader[0].c2_1[0]": null
 topmostSubform[0].CopyB[0].LeftColumn[0].f2_2[0]: [0, 2]
 topmostSubform[0].CopyB[0].LeftColumn[0].f2_3[0]: 8
 topmostSubform[0].CopyB[0].LeftColumn[0].f2_4[0]: 9
